<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindComic</string>
    
    <string name="homepage">首页</string>
    <string name="recommend">推荐</string>
    <string name="find_comic">找漫画</string>
    <string name="setting">设置</string>
    
    <string name="soft_setting">软件设置</string>
    <string name="download_manage">下载管理</string>
    <string name="local_comic">本地漫画</string>
    <string name="check_update">检测升级</string>
	<string name="about_find_comic">关于找漫画</string>
	
	<string name="read_setting">阅读设置</string>
	<string name="continue_read">继续观看</string>
	<string name="had_read">看到</string>
	
	<string name="hint">提示</string>
	<string name="share">分享</string>
	<string name="landscape">横屏</string>
	<string name="portrait">竖屏</string>
	<string name="comic_loading">漫画加载中</string>
	<string name="landscape_page">横向翻页</string>
	<string name="portrait_page">纵向翻页</string>
	<string name="left_page">左手翻页</string>
	<string name="right_page">右手翻页</string>
	
	<string name="dmzj">动漫之家</string>
	<string name="dm123">动漫fans</string>
	<string name="msite">MSite</string>
	<string name="loading">载入中...</string>
	
	<string name="input_comic_name">输入漫画名</string>
	<string name="search">搜索</string>
	<string name="hot_classify">热门分类</string>
	
	<string name="data_loading">获取数据中</string>
	
	<string name="download">下载</string>
	<string name="author">作者:</string>
	<string name="begin_read">开始阅读</string>
	<string name="serialise">连载</string>
	<string name="choose_download_chapter">请选择下载的章节</string>
	<string name="choose_all">全选</string>
	<string name="confirm_download">确认下载</string>
	
	<string-array name="category">
	    <item>萌系</item>
	    <item>搞笑</item>
	    <item>格斗</item>
	    <item>科幻</item>
	    <item>剧情</item>
	    <item>侦探</item>
	    <item>竞技</item>
	    <item>魔法</item>
	    <item>神鬼</item>
	    <item>校园</item>
	    <item>惊栗</item>
	    <item>厨艺</item>
	    <item>伪娘</item>
	    <item>图片</item>
	    <item>冒险</item>
	    <item>小说</item>
	    <item>港漫</item>
	    <item>耽美</item>
	    <item>经典</item>
	    <item>欧美</item>
	    <item>日文</item>
	</string-array>
	
	<string-array name="dm_pause">
	    <item>章节管理</item>
	    <item>开始</item>
	    <item>删除</item>
	</string-array>
	
	<string-array name="dm_downloading">
	    <item>章节管理</item>
	    <item>暂停</item>
	</string-array>
	
	<string-array name="dm_finished">
	   	<item>章节管理</item>
	    <item>删除</item>
	</string-array>
	
	<string name="network_error">联网失败,请重试</string>
	<string name="re_get">重新获取</string>
	
	<item 
	    type="id"
	    name="dm_adapter_convertview"></item>
	<item 
	    type="id" 
	    name="cm_adapter_convertview"></item>
	
</resources>
