<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver_gray" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/download"
            android:textColor="@drawable/textview_color_click"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progressBar"/>

        <com.zhr.customview.NoAutoScrollView
            android:id="@+id/scrollview"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_margin="8dp" >

                    <ImageView
                        android:id="@+id/cover"
                        android:layout_width="83dp"
                        android:layout_height="110dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/cover"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/author_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/cover"
                        android:gravity="center"
                        android:text="@string/author"
                        android:textColor="@color/light_black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/author_text"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/read_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@id/author"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/cover"
                        android:background="@drawable/comic_intro_button_shape"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </RelativeLayout>

                <com.zhr.customview.TextViewWithExpand
                    android:id="@+id/intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
                
                <View 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                
                <RelativeLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/serialise"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>
                    <TextView 
                        android:id="@+id/last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_black"
                        android:layout_alignParentRight="true"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>
                </RelativeLayout>
                <com.zhr.customview.GridViewInScrollView 
                    android:id="@+id/chapter_num_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="4"
 	    			android:horizontalSpacing="5dp"
 	   				android:verticalSpacing="5dp"
 	    			android:stretchMode="columnWidth"
 	    			android:gravity="center"/>
                <View 
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            </LinearLayout>
            
        </com.zhr.customview.NoAutoScrollView>
    </FrameLayout>

</LinearLayout>